--- a/CSS/color_testing.css
+++ b/CSS/color_testing.css
@@ -20,5 +20,5 @@ body{
                 color: yellow;
             }
             .checkbox{
-               color: yellow;
+               color: pink;
             }
